--- a/proj01/composer.json
+++ b/proj01/composer.json
@@ -1,13 +1,13 @@
 {
     "require": {
-        "phpunit/phpunit": "^9.5"
+        "phpunit/phpunit": "^8.5.42"
     },
     "autoload": {
         "psr-4": {
             "Code\\": "src/"
         }
     },
-    "config": {
-        "bin-dir": "bin/"
+    "scripts": {
+        "test": "phpunit"
     }
 }
