28 Iniciando Testes da Classe Select

--- a/Proj2QueryBuilder/composer.json
+++ b/Proj2QueryBuilder/composer.json
@@ -9,5 +9,13 @@
   },
   "scripts": {
     "test": "phpunit"
+  },
+  "config": {
+    "bin-dir": "bin/"
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "CodeTest\\": "test/"
+    }
   }
 }
